scaling now working

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rick and Morty Themed Interdimensional Cocktail Portal</title>
     <link rel="stylesheet" href="src/style.css">
-    <script type="module" src="dist/bundle.js"></script>
+    <script type="module" src="dist/ScaleToFitWindow.js"></script>
+    <script type="module" src="dist/index.js"></script>
 </head>
 
 <body>
