added microbundle, not working

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rick and Morty Themed Interdimensional Cocktail Portal</title>
     <link rel="stylesheet" href="src/style.css">
-    <script type="module" src="dist/ScaleToFitWindow.js"></script>
-    <script type="module" src="dist/index.js"></script>
+    <!-- <script type="module" src="./node_modules/maptastic/dist/maptastic.js"></script> -->
+    <!-- <script src="https://unpkg.com/systemjs@6.1.4/dist/s.min.js"></script>
+    <script src="https://unpkg.com/systemjs@6.1.4/dist/extras/named-register.min.js"></script> -->
+    <!-- <script src="node_modules/gsap/dist/gsap.js"></script> -->
+    <script type="module" src="dist/index.modern.js"></script>
+    <!-- <script>
+        System.import('./dist/index.js');
+      </script> -->
 </head>
 
 <body>
