added chromakey, fixed chromekey bug, made portal suqare

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,11 @@
 
     <div id="screen">
         <img class="house" width="1080" height="1080" src="src/background-2-center.jpg" />
+
+        <canvas id="portal" width="1080" height="1080" ></canvas>
     </div>
+
+    <video id="video" width="1080" height="1080" src="src/portal.mp4" autoplay muted loop></video>
     
 </body>
 
