--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <div id="screen">
-        <img class="house" width="1080" height="1080" src="src/background-2-center.jpg" />
+        <img id="house" width="1080" height="1080" src="src/background-2-center.jpg" />
 
         <canvas id="portal" width="1080" height="1080" ></canvas>
     </div>
