--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,6 @@
 <body>
 
     <div id="screen">
-
         <div id="app">
             <!-- hidden portal video animation -->
             <video id="video" width="1080" height="1080" src="src/portal.mp4" autoplay muted loop></video>
@@ -30,6 +29,8 @@
 
             <!-- aniamted portal -->
             <canvas id="portal" width="1080" height="1080" ></canvas>
+            
+            <p class="header-title" style="position: absolute; top: -10px; left: 30px; color:greenyellow; font-weight: normal; font-size: xxx-large; font-family: 'Rick and Morty';">Rick and Morty Interdimensional Cocktail Portal</p>
         </div>
     </div>
 
