created start screen

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,8 +28,8 @@
             <img id="house" width="1080" height="1080" src="src/background-2-center.jpg" />
 
             <!-- aniamted portal -->
-            <canvas id="portal" class="invisible" width="1080" height="1080" ></canvas>
-            <img id="portal-image" class="visible" width="1080" height="1080" src="src/portal.png"></img>
+            <canvas id="portal" class="portal visible" width="1080" height="1080" ></canvas>
+            <img id="portal-image" class="portal visible" width="1080" height="1080" src="src/portal.png"></img>
 
             <p class="header-title" style="position: absolute; top: -10px; left: 30px; color:greenyellow; font-weight: normal; font-size: xxx-large; font-family: 'Rick and Morty';">Rick and Morty Interdimensional Cocktail Portal</p>
         </div>
