add ui dist files

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Google Media Pipe Face Detection Test using Typescript, (c) 2023 Christian Schüler, christianschueler.at</title>
     <link rel="stylesheet" href="src/style.css">
-    <script type="module" src="dist/bundle.js"></script>
+    <script type="module" src="dist-copy/bundle.js"></script>
 </head>
 
 <body>
