started karl-isis ui added assets first graphics placed

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image" href="src/icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Google Media Pipe Face Detection Test using Typescript, (c) 2023 Christian Schüler, christianschueler.at</title>
+    <title>Karl-Isis the 25001 UI</title>
     <link rel="stylesheet" href="src/style.css">
     <script type="module" src="dist/bundle.js"></script>
 </head>
@@ -15,9 +15,26 @@
     <div id="screen">
         <div id="app">
             <!-- hidden portal video animation -->
-            <video id="video" width="300" height="300" autoplay muted loop></video>
+            <!-- <video id="video" width="300" height="300" autoplay muted loop></video>
 
-            <p class="header-title" style="position: absolute; top: -10px; left: 30px; color:greenyellow; font-weight: normal; font-size: large;">Google Media Pipe Face Detection Test using Typescript, (c) 2023 Christian Schüler, christianschueler.at</p>
+            <p class="header-title" style="position: absolute; top: -10px; left: 30px; color:greenyellow; font-weight: normal; font-size: large;">Google Media Pipe Face Detection Test using Typescript, (c) 2023 Christian Schüler, christianschueler.at</p> -->
+
+            <div class="top area">
+                <!-- <h1 class="header-title">Cocktails by ChatGPT</p> -->
+                <div>
+                    <img class="chatgpt-logo-wide" src="./assets/chatgpt-3-white.svg" width="20%"/>
+                    <h1 class="title">... serves your Cocktails</h1>
+                    <img class="cocktail" src="./assets/cocktail-glass-white.svg" width="20%"/>
+                </div>
+            </div>
+
+            <div class="content area">
+
+            </div>
+
+            <div class="bottom area">
+
+            </div>
         </div>
     </div>
 
