--- a/ui/index.html
+++ b/ui/index.html
@@ -29,7 +29,13 @@
             </div>
 
             <div class="content area">
-
+                <div class="step1">
+                    <img class="cup" src="./assets/cup.png"/>
+                </div>
+                <div class="step2"></div>
+                <div class="step2a"></div>
+                <div class="step3"></div>
+                <div class="step4"></div>
             </div>
 
             <div class="bottom area">
