added next screens and logos added gsap animation

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,6 @@
             <p class="header-title" style="position: absolute; top: -10px; left: 30px; color:greenyellow; font-weight: normal; font-size: large;">Google Media Pipe Face Detection Test using Typescript, (c) 2023 Christian Schüler, christianschueler.at</p> -->
 
             <div class="top area">
-                <!-- <h1 class="header-title">Cocktails by ChatGPT</p> -->
                 <div>
                     <img class="chatgpt-logo-wide" src="./assets/chatgpt-3-white.svg" width="20%"/>
                     <h1 class="title">... serves your Cocktails</h1>
@@ -29,17 +28,41 @@
             </div>
 
             <div class="content area">
-                <div class="step1">
-                    <img class="cup" src="./assets/cup.png"/>
+                <div class="screen1 invisible">
+                    <div class="step1">
+                        <h1>1 place cup</h1>
+                        <img class="cup" src="./assets/cup-white.png"/>
+                    </div>
+                    <div class="step2">
+                        <h1>2 select </h1>
+                        <img class="openai-button" src="./assets/chatgpt-circular-outline-white.png"/>
+                        <h1>&nbsp;ChatGPT or&nbsp;</h1>
+                        <img class="no-alcohol-button" src="./assets/non-alcoholic-drink-white.png"/>
+                        <h1>&nbsp;no alcohol </h1>
+                    </div>
                 </div>
-                <div class="step2"></div>
-                <div class="step2a"></div>
-                <div class="step3"></div>
-                <div class="step4"></div>
+
+                <div class="screen2 invisible">
+                    <img class="logo" src="./assets/openai-2-white.svg"/>
+                    <h1>ChatGPT is inventing your cocktail...</h1>
+                </div>
+
+                <div class="screen2a visible">
+                    <img class="logo" src="./assets/non-alcoholic-drink-white.png"/>
+                    <h1>Inventing random non-alcoholic cocktail ...</h1>
+                </div>
+
+                <div class="screen3">
+
+                </div>
+
+                <div class="screen4">
+
+                </div>
             </div>
 
             <div class="bottom area">
-
+                <h1><strong>K</strong>arl <strong>I</strong>sis - dein KI Overlord serviert Cocktails</h1>
             </div>
         </div>
     </div>
