all screens raw ready

--- a/ui/index.html
+++ b/ui/index.html
@@ -87,16 +87,18 @@
                 </div>
 
                 <div class="screen4 visible">
-                    <img class="logo" src="./assets/heart-red.png"/>
+                    <div class="logo-wrapper">
+                        <img class="logo" src="./assets/heart-red.png"/>
+                    </div>
                     <h1>Enjoy your...</h1>
                     <h1 class="cocktail-name">FANCY COCKTAIL NAME</h1>
                     <ul class="cocktail-recipe">
-                        <li>1 cl INGREDIENT</li>
-                        <li>5 cl INGREDIENT</li>
-                        <li>10 cl INGREDIENT</li>
-                        <li>15 cl INGREDIENT</li>
-                        <li>20 cl INGREDIENT</li>
-                        <li>25 cl INGREDIENT</li>
+                        <li>1 cl INGREDIENT 1</li>
+                        <li>5 cl INGREDIENT 2</li>
+                        <li>10 cl INGREDIENT 3</li>
+                        <li>15 cl INGREDIENT 4</li>
+                        <li>20 cl INGREDIENT 5</li>
+                        <li>25 cl INGREDIENT 6</li>
                     </ul>
                 </div>
             </div>
