moving through first screens

--- a/ui/index.html
+++ b/ui/index.html
@@ -83,10 +83,10 @@
                                 id="path2" inkscape:label="reflection" style="fill:#ffffff" />
                         </g>
                     </svg>
-                    <h1>ChatGPT is inventing your cocktail...</h1>
+                    <h1>Serving your cocktail...</h1>
                 </div>
 
-                <div class="screen4 visible">
+                <div class="screen4 invisible">
                     <div class="logo-wrapper">
                         <img class="logo" src="./assets/heart-red.png"/>
                     </div>
