--- a/ui/index.html
+++ b/ui/index.html
@@ -113,7 +113,7 @@
             </div>
 
             <div class="bottom area">
-                <h1><strong>K</strong>arl <strong>I</strong>sis - dein KI Overlord serviert Cocktails</h1>
+                <h1>--> <strong>K</strong>arl <strong>I</strong>sis <-- <br>... dein KI Overlord serviert Cocktails</h1>
             </div>
         </div>
     </div>
