up to 12 ingredients better names, more intersting cocktials

--- a/ui/index.html
+++ b/ui/index.html
@@ -49,7 +49,7 @@
 
                 <div class="screen2a invisible">
                     <img class="logo" src="./assets/non-alcoholic-drink-white.png"/>
-                    <h1>Inventing random non-alcoholic cocktail ...</h1>
+                    <h1>Inventing random cocktail ...</h1>
                 </div>
 
                 <div class="screen3 invisible">
