added donating text to heart

--- a/ui/index.html
+++ b/ui/index.html
@@ -97,7 +97,7 @@
 
                 <div class="screen4 invisible">
                     <div class="logo-wrapper">
-                        <img class="logo" src="./assets/heart-red.png"/>
+                        <img class="logo" src="./assets/heart-red-text.png"/>
                     </div>
                     <h1>Enjoy your...</h1>
                     <h1 class="cocktail-name">FANCY COCKTAIL NAME</h1>
